--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:mahmoud.kraiem@gmail.com">email</a></li>
-            <li><a href="in.linkedin.com/in/mahmoudkraiem">linkedin</a></li>
+            <li><a href="https://in.linkedin.com/in/mahmoudkraiem">linkedin</a></li>
         		<li><a href="https://github.com/breebchi">github.com/breebchi</a></li>
 			</ul>
 		</footer>
