--- a/index.html
+++ b/index.html
@@ -1,32 +1,9 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Mahmoud Kraiem, science and tek enthusiast</title>
-    <!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
+---
+layout: default
+title: Mahmoud Kraiem, science and tek enthusiast
+---
+<div class="blurb">
         		<h1>Hi there, I'm Mahmoud Kraiem!</h1>
 				<p>I'm best known online as breebchi. I'm an electronics engineer tunred software developer. 
         I love coding and I'm trying to make a living of it. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:mahmoud.kraiem@gmail.com">email</a></li>
-            <li><a href="https://in.linkedin.com/in/mahmoudkraiem">linkedin</a></li>
-        		<li><a href="https://github.com/breebchi">github.com/breebchi</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
