--- a/cv/index.html
+++ b/cv/index.html
@@ -3,5 +3,5 @@ layout: default
 title: Mahmoud Kraiem, science and tek enthusiast
 ---
 <div class="blurb">
-        	<iframe src="http://docs.google.com/gview?url=http://example.com/mypdf.pdf&embedded=true" style="width:718px; height:700px;" frameborder="0"></iframe>
+<embed src="breebchi.github.io/CV Mahmoud KRAIEM english Mumbai Shortened Jan 2017.pdf" width="500" height="375" type='application/pdf'>
     		</div><!-- /.blurb -->
