--- a/cv/index.html
+++ b/cv/index.html
@@ -3,5 +3,5 @@ layout: default
 title: Mahmoud Kraiem, science and tek enthusiast
 ---
 <div class="blurb">
-<embed src="http://breebchi.github.io/CV Mahmoud KRAIEM english Mumbai Shortened Jan 2017.pdf" width="500" height="375" type='application/pdf'>
+<embed src="http://breebchi.github.io/CV_MAHMOUD_KRAIEM.pdf" width="500" height="375" type='application/pdf'>
     		</div><!-- /.blurb -->
