--- a/cv/index.html
+++ b/cv/index.html
@@ -3,5 +3,5 @@ layout: default
 title: Mahmoud Kraiem, science and tek enthusiast
 ---
 <div class="blurb">
-<embed src="http://breebchi.github.io/CV_MAHMOUD_KRAIEM.pdf" width="500" height="375" type='application/pdf'>
+    <iframe src="https://drive.google.com/file/d/0B6JldOI3g73aTEpoSG5pazhFZlE/preview" width="640" height="480"></iframe>
     		</div><!-- /.blurb -->
