--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Mahmoud Kraiem, science and tek enthusiast
 ---
 <div class="blurb">
         		<h1>Hi there, I'm Mahmoud Kraiem!</h1>
-				<p>I'm best known online as breebchi. I'm an electronics engineer tunred software developer. 
-        I love coding and I'm trying to make a living of it. <a href="/about">Read more about my life...</a></p>
+				<p>I'm an electronics engineer tunred software developer. I love science and technology.
+					This is a space where I'm trying to introduce myself. 
+					As you can see, it's pretty empty right now. <a href="/about">Here, read more about me</a></p>
     		</div><!-- /.blurb -->
