--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ title: Mahmoud Kraiem, science and tek enthusiast
         		<h1>Hi there, I'm Mahmoud Kraiem!</h1>
 				<p>I'm an electronics engineer tunred software developer. I love science and technology.
 					This is a space where I'm trying to introduce myself. 
-					As you can see, it's pretty empty right now. <a href="/about">Here, read more about me</a></p>
+					As you can see, it's pretty empty right now. <a href="/about">Here, read more about me.</a></p>
     		</div><!-- /.blurb -->
