--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 layout: default
 title: Mahmoud Kraiem, science and tek enthusiast
 ---
-<div class="blurb">
+<div class="blurb col-md-8">
         		<h1>Hi there, I'm Mahmoud Kraiem!</h1>
 				<p>I'm an electronics engineer tunred software developer. I love science and technology.
 					This is a space where I'm trying to introduce myself. 
 					As you can see, it's pretty empty right now. <a href="/about">Here, read more about me.</a></p>
     		</div><!-- /.blurb -->
+<div class="col-md-4">
+	<a class="twitter-timeline" data-width="250" data-height="400" href="https://twitter.com/TwitterDev">Tweets by TwitterDev</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
+
