--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: Mahmoud Kraiem, science and tek enthusiast
 ---
+<div class="col-md-12">
 <div class="blurb col-md-8">
         		<h1>Hi there, I'm Mahmoud Kraiem!</h1>
 				<p>I'm an electronics engineer tunred software developer. I love science and technology.
@@ -11,4 +12,5 @@ title: Mahmoud Kraiem, science and tek enthusiast
 <div class="col-md-4">
 	<a class="twitter-timeline" data-width="250" data-height="400" href="https://twitter.com/TwitterDev">Tweets by TwitterDev</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
+	</div>
 
