--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Mahmoud Kraiem, science and tek enthusiast
 					As you can see, it's pretty empty right now. <a href="/about">Here, read more about me.</a></p>
     		</div><!-- /.blurb -->
 <div class="col-md-4">
-	<a class="twitter-timeline" data-width="250" data-height="400" href="https://twitter.com/TwitterDev">Tweets by TwitterDev</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<a class="twitter-timeline" data-width="250" data-height="400" href="https://twitter.com/breebchi">Tweets by breebchi</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 	</div>
 
