--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Mahmoud Kraiem, science and tek enthusiast
 <div class="col-md-12">
 <div class="blurb col-md-8">
         		<h1>Hi there, I'm Mahmoud Kraiem!</h1>
-				<p>I'm an electronics engineer tunred software developer. I love science and technology.
+				<p>I'm an electronics engineer turned software developer. I love science and technology.
 					This is a space where I'm trying to introduce myself. 
 					As you can see, it's pretty empty right now. <a href="/about">Here, read more about me.</a></p>
     		</div><!-- /.blurb -->
