--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,6 @@ title: About Mahmoud Kraiem
 <div class="blurb">
         		<h1>Hi there, I'm Mahmoud Kraiem!</h1>
 				<p>I'm born and raised in Tunisia and currently interning in Mumbai as a system engineer for Tata Consultancy Services. 
-					I'm an electronics engineer tunred software developer. 
+					I'm an electronics engineer turned software developer. 
         I love coding and I'm trying to make a living of it and maybe may I contribute to making someone's life better. <a href="/cv">You can see my resume here.</a></p>
     		</div><!-- /.blurb -->
