Update and rename angularTEST/index.html to angulartest/index.html

--- a/angulartest/index.html
+++ b/angulartest/index.html
@@ -1,10 +1,9 @@
 ---
-layout: angularTEST
+layout: angulartest
 title: Tickets, Angularjs demo
 ---
 
 
-<div class="container" ng-app="app" ng-controller="mainController">
   
   <div class="text-center">
     <p>Example of Angular and the normal Bootstrap JavaScript components</p>
@@ -47,4 +46,3 @@ title: Tickets, Angularjs demo
   
   <pre><code>{{ isCollapsed }}</code></pre>
   
-</div>
