--- a/angularjs/index.html
+++ b/angularjs/index.html
@@ -87,7 +87,7 @@ title: Tickets, Angularjs demo
                         <label class="control-label col-md-6 col-xs-6 col-sm-6 col-lg-6"><b>Brand</b> </label>
                         <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 ">
                           <span class="form-control-static" ng-show="!IsDateTimeEdit">{{group.brandCode}}</span>
-                         <span ng-module="groupsString"> </span>
+                         <span ng-module="groups"> </span>
                         </div>
                       </div>
                     </form>
