--- a/about/index.html
+++ b/about/index.html
@@ -4,5 +4,5 @@ title: About Mahmoud Kraiem
 ---
 <div class="blurb">
         		<h1>Hi there, I'm Mahmoud Kraiem!</h1>
-				<p>I'm born and raised in Tunisia and currently interning in Mumbai as a system engineer for Tata Consultancy Services. <br> I'm an electronics engineer turned software developer. <br>I love coding and I'm trying to make a living of it and maybe may I contribute to making someone's life better. <br> I'm also a science enthusiast and I wish to contribute to human space exploration someday.<a href="/cv">You can see my resume here.</a></p>
+				<p>I'm born and raised in Tunisia and currently interning in Mumbai as a system engineer for Tata Consultancy Services. <br> I'm an electronics engineer turned software developer. <br>I love coding and I'm trying to make a living of it and maybe may I contribute to making someone's life better. <br> I'm also a science enthusiast and I wish to contribute to human space exploration someday.<br><a href="/cv">Please find my resume here.</a></p>
     		</div><!-- /.blurb -->
