--- a/cv/index.html
+++ b/cv/index.html
@@ -6,7 +6,7 @@ title: Mahmoud Kraiem, science and tek enthusiast
     <iframe src="https://drive.google.com/file/d/0B6JldOI3g73aTEpoSG5pazhFZlE/preview" width="950" height="480"></iframe>
     		</div> /.blurb -->
 <div class="row">
-    <div class="embed-responsive embed-responsive-16by9 center-block" style="max-width: 853px;">
+    <div class="embed-responsive center-block col-xs-12 col-md-push-1 col-md-10" style="max-width: 853px;">
     <iframe class="embed-responsive-item" style="max-width:853px; max-height:480px;" src="https://drive.google.com/file/d/0B6JldOI3g73aTEpoSG5pazhFZlE/preview"></iframe>
     </div>
 </div>
