--- a/cv/index.html
+++ b/cv/index.html
@@ -5,8 +5,22 @@ title: Mahmoud Kraiem, science and tek enthusiast
 <!--<div class="blurb">
     <iframe src="https://drive.google.com/file/d/0B6JldOI3g73aTEpoSG5pazhFZlE/preview" width="950" height="480"></iframe>
     		</div> /.blurb -->
-<div class="row">
+<!--<div class="row">
     <div class="embed-responsive center-block col-xs-12 " style="max-width: 853px;">
     <iframe class="embed-responsive-item" style="max-width:853px; max-height:480px;" src="https://drive.google.com/file/d/0B6JldOI3g73aTEpoSG5pazhFZlE/preview"></iframe>
     </div>
+</div> -->
+
+<div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
+  <div class="responsive-wrapper 
+     responsive-wrapper-wxh-572x612"
+     style="-webkit-overflow-scrolling: touch; overflow: auto;">
+
+    <iframe src="https://drive.google.com/file/d/0B6JldOI3g73aTEpoSG5pazhFZlE/preview"> 
+      <p style="font-size: 110%;"><em><strong>ERROR: </strong>  
+An &#105;frame should be displayed here but your browser version does not support &#105;frames. </em>Please update your browser to its most recent version and try again.</p>
+    </iframe>
+    
+  </div>
 </div>
+
