--- a/cv/index.html
+++ b/cv/index.html
@@ -12,7 +12,7 @@ title: Mahmoud Kraiem, science and tek enthusiast
 </div> -->
 
 <div class="row">
-  <div class="col-sm-8 center-block">
+  <div class="col-sm-push-1 col-sm-10 center-block">
       
 <div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
   <div class="responsive-wrapper 
