--- a/cv/index.html
+++ b/cv/index.html
@@ -14,7 +14,7 @@ title: Mahmoud Kraiem, science and tek enthusiast
 <div class="row">
   <div class="col-sm-push-1 col-sm-10 center-block">
       
-<div id="Iframe-Master-CC-and-Rs" class="set-margin set-padding set-border set-box-shadow center-block-horiz">
+<div id="Iframe-Master-CC-and-Rs" class="set-margin set-box-shadow center-block-horiz">
   <div class="responsive-wrapper 
      responsive-wrapper-wxh-572x612"
      style="-webkit-overflow-scrolling: touch; overflow: auto;">
