--- a/cv/index.html
+++ b/cv/index.html
@@ -11,8 +11,8 @@ title: Mahmoud Kraiem, science and tek enthusiast
     </div>
 </div> -->
 
-<div class="row">
-  <div class="col-sm-push-1 col-sm-10 center-block">
+<!--<div class="row">
+  <div class="col-sm-push-1 col-sm-10 center-block">-->
       
 <div id="Iframe-Master-CC-and-Rs" class="set-margin set-box-shadow center-block-horiz">
   <div class="responsive-wrapper 
@@ -25,6 +25,6 @@ title: Mahmoud Kraiem, science and tek enthusiast
   </div>
 </div>
       
-    </div>
-</div>
+ <!--  </div>
+</div>-->
 
