--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Mahmoud Kraiem, science and tek enthusiast
         		<h1>Hi there, I'm Mahmoud Kraiem!</h1>
 				<p>I'm an electronics engineer turned software developer. I love science and technology.
 					This is a space where I'm trying to introduce myself. 
-					As you can see, it's pretty empty right now. <a href="/about">Here, read more about me.</a></p>
+					As you can see, it's a bit lacking in content right now but hey, we just started. <a href="/about">Here, read more about me.</a></p>
     		</div><!-- /.blurb -->
 <div class="col-md-3">
 	<a class="twitter-timeline" data-width="250" data-height="400" href="https://twitter.com/breebchi">Tweets by breebchi</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
