--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,62 @@
----
-layout: default
-title: About Mahmoud Kraiem
----
-<div class="blurb">
-        		<h2>Hi there, I'm Mahmoud Kraiem!</h2>
-				<p>I'm born and raised in Tunisia and currently interning in Mumbai as a system engineer for Tata Consultancy Services. <br> I'm an electronics engineer turned software developer. <br>I love coding and I'm trying to make a living of it and maybe may I contribute to making someone's life better. <br> I'm also a science enthusiast and I wish to contribute to human space exploration someday.<br><a href="/cv">Please find my resume here.</a></p>
-    		</div><!-- /.blurb -->
+
+--- 
+layout: default 
+title: About Mahmoud Kraiem 
+--- 
+	<script>
+	   $(document).ready(function(){
+	    // Add smooth scrolling to all links
+	    $("a").on('click', function(event) {
+
+	      // Make sure this.hash has a value before overriding default behavior
+	      if (this.hash !== "") {
+	        // Prevent default anchor click behavior
+	        event.preventDefault();
+
+	        // Store hash
+	        var hash = this.hash;
+
+	        // Using jQuery's animate() method to add smooth page scroll
+	        // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+	        $('html, body').animate({
+	          scrollTop: $(hash).offset().top
+	        }, 800, function(){
+	     
+	          // Add hash (#) to URL when done scrolling (default click behavior)
+	          window.location.hash = hash;
+	        });
+	      } // End if
+	    });
+	   });
+	</script>
+	<style>
+	   body, html, .main {
+	      height: 100%;
+	   }
+
+	   section {
+	      min-height: 100%;
+	   }
+	</style>
+	<div class="blurb">
+		<div class="main">
+			<section>
+				<h2>Hi there, I'm Mahmoud Kraiem!</h2>
+				<p>I'm born and raised in Tunisia and currently interning in Mumbai as a system engineer for Tata Consultancy Services.<br>
+				I'm an electronics engineer turned software developer.<br>
+				I love coding and I'm trying to make a living of it and maybe may I contribute to making someone's life better.<br>
+				I'm also a science enthusiast and I wish to contribute to human space exploration someday.<br>
+				<a href="#cv">Please find my resume here.</a></p>
+			</section>
+		</div>
+		<div class="main" id="cv">
+			<section>
+				<div class="set-margin set-box-shadow center-block-horiz" id="Iframe-Master-CC-and-Rs">
+					<div class="responsive-wrapper responsive-wrapper-wxh-572x612" style="-webkit-overflow-scrolling: touch; overflow: auto;">
+						<iframe src="https://drive.google.com/file/d/0B6JldOI3g73aTEpoSG5pazhFZlE/preview">
+						<p style="font-size: 110%;"><em><strong>ERROR:</strong> An &#105;frame should be displayed here but your browser version does not support &#105;frames.</em> Please update your browser to its most recent version and try again.</p></iframe>
+					</div>
+				</div>
+			</section>
+		</div>
+	</div><!-- /.blurb -->
