--- a/about/index.html
+++ b/about/index.html
@@ -3,41 +3,13 @@
 layout: default 
 title: About Mahmoud Kraiem 
 --- 
-	<script>
-	   $(document).ready(function(){
-	    // Add smooth scrolling to all links
-	    $("a").on('click', function(event) {
+	
+--- 
+layout: default 
+title: About Mahmoud Kraiem 
+--- 
 
-	      // Make sure this.hash has a value before overriding default behavior
-	      if (this.hash !== "") {
-	        // Prevent default anchor click behavior
-	        event.preventDefault();
-
-	        // Store hash
-	        var hash = this.hash;
-
-	        // Using jQuery's animate() method to add smooth page scroll
-	        // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-	        $('html, body').animate({
-	          scrollTop: $(hash).offset().top
-	        }, 800, function(){
-	     
-	          // Add hash (#) to URL when done scrolling (default click behavior)
-	          window.location.hash = hash;
-	        });
-	      } // End if
-	    });
-	   });
-	</script>
-	<style>
-	   body, html, .main {
-	      height: 100%;
-	   }
-
-	   section {
-	      min-height: 100%;
-	   }
-	</style>
+	
 	<div class="blurb">
 		<div class="main">
 			<section>
@@ -60,3 +32,5 @@ title: About Mahmoud Kraiem
 			</section>
 		</div>
 	</div><!-- /.blurb -->
+
+	
