--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ title: About Mahmoud Kraiem
 
 	
 	<div class="blurb">
-		<div class="main">
+		<div class="">
 			<section>
 				<h2>Hi there, I'm Mahmoud Kraiem!</h2>
 				<p>I'm born and raised in Tunisia and currently interning in Mumbai as a system engineer for Tata Consultancy Services.<br>
@@ -15,7 +15,7 @@ title: About Mahmoud Kraiem
 				<a href="#cv">Please find my resume here.</a></p>
 			</section>
 		</div>
-		<div class="main" id="cv">
+		<div class="" id="cv">
 			<section>
 				<div class="set-margin set-box-shadow center-block-horiz" id="Iframe-Master-CC-and-Rs">
 					<div class="responsive-wrapper responsive-wrapper-wxh-572x612" style="-webkit-overflow-scrolling: touch; overflow: auto;">
