--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@ layout: default
 title: About Mahmoud Kraiem 
 ---
 	<div class="blurb">
-		<div class="section full-page vertical-center" >
+		<div class="section full-pager" >
 			
 				<h2>Hi there, I'm Mahmoud Kraiem!</h2>
 				<p>I'm born and raised in Tunisia and currently interning in Mumbai as a system engineer for Tata Consultancy Services.<br>
@@ -12,7 +12,7 @@ title: About Mahmoud Kraiem
 				I'm also a science enthusiast and I wish to contribute to human space exploration someday.<br>
 				<a href="#cv">Please find my resume here.</a></p>
 		</div>
-		<div class="section full-page vertical-center" id="cv">
+		<div class="section full-page" id="cv">
 				<div class="set-margin set-box-shadow center-block-horiz" id="Iframe-Master-CC-and-Rs">
 					<div class="responsive-wrapper responsive-wrapper-wxh-572x612" style="-webkit-overflow-scrolling: touch; overflow: auto;">
 						<iframe src="https://drive.google.com/file/d/0B6JldOI3g73aTEpoSG5pazhFZlE/preview">
