--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,11 @@ title: About Mahmoud Kraiem
 ---
 	<div class="blurb">
 		<div class="section full-page" style=" align-items : center;" >
-			
+			<div class="row" style="height:50%;">
+            <div class="col-md-12">
+            <img src="/10917915_1384846851823378_8527754709816483730_o.jpg" />
+            </div>    
+        </div>   
 				<h2>Hi there, I'm Mahmoud Kraiem!</h2>
 				<p>I'm born and raised in Tunisia and currently interning in Mumbai as a system engineer for Tata Consultancy Services.<br>
 				I'm an electronics engineer turned software developer.<br>
