--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@ layout: default
 title: About Mahmoud Kraiem 
 ---
 	<div class="blurb">
-		<div class="section full-page" style=" align-items : center;" >
+		<div class="section full-page" style=" align-items : center; padding-top: 20%;" >
 			
 				<h2>Hi there, I'm Mahmoud Kraiem!</h2>
 				<p>I'm born and raised in Tunisia and currently interning in Mumbai as a system engineer for Tata Consultancy Services.<br>
