--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@ title: About Mahmoud Kraiem
 		</div>
 		<div class="section full-page" id="cv">
 				<div class="set-margin set-box-shadow center-block-horiz" id="Iframe-Master-CC-and-Rs">
-					<div class="responsive-wrapper " style="-webkit-overflow-scrolling: touch; overflow: auto;">
+					<div class="responsive-wrapper responsive-wrapper-wxh-572x612" style="-webkit-overflow-scrolling: touch; overflow: auto;">
 						<iframe src="https://drive.google.com/file/d/0B6JldOI3g73aTEpoSG5pazhFZlE/preview">
 						<p style="font-size: 110%;"><em><strong>ERROR:</strong> An &#105;frame should be displayed here but your browser version does not support &#105;frames.</em> Please update your browser to its most recent version and try again.</p></iframe>
 					</div>
