--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: Mahmoud Kraiem, science and tek enthusiast
 ---
 <div class="col-md-12">
 <div class="blurb col-md-9">
-        		<h2>Hi there, I'm Mahmoud Kraiem!</h2>
-				<p>I'm an electronics engineer turned software developer. I love science and technology.
+        		<h2>Mahmoud Kraiem,</h2>
+				<p>an electronics engineer turned software developer. I love science and technology.
 					This is a space where I'm trying to introduce myself. 
 					As you can see, it's a bit lacking in content right now but hey, we just started. <a href="/about">Here, read more about me.</a></p>
     		</div><!-- /.blurb -->
