--- a/about/index.html
+++ b/about/index.html
@@ -5,12 +5,14 @@ title: About Mahmoud Kraiem
 	<div class="blurb">
 		<div class="section full-page" style=" align-items : center; padding-top: 20%;" >
 			
-				<h2>Hi there, I'm Mahmoud Kraiem!</h2>
-				<p>I'm born and raised in Tunisia and currently interning in Mumbai as a system engineer for Tata Consultancy Services.<br>
-				I'm an electronics engineer turned software developer.<br>
-				I love coding and I'm trying to make a living of it and maybe may I contribute to making someone's life better.<br>
-				I'm also a science enthusiast and I wish to contribute to human space exploration someday.<br>
-				<a href="#cv">Please find my resume here.</a></p>
+				<h2>About me,</h2>
+				<p>born and raised in Tunisia, I'm currently interning in Mumbai as a system engineer for Tata Consultancy Services.<br>
+				I'm passionate about sience and technology, I love coding and I'm trying to make a living of it<br>
+				and maybe may I contribute to making someone's life better or contribute something grand for humanity's sake.<br>
+				My wildest dream is to contribute to something big in the space industry.<br>
+				I believe that by exploring space, humans will come to understand that their<br>
+				humanity transends borders and cultures.<br>
+				To find more about me, <a href="#cv">navigate to my CV by clicking here.</a></p><br>
 		</div>
 		<div class="section full-page" id="cv">
 				<div class="set-box-shadow center-block-horiz" id="Iframe-Master-CC-and-Rs">
