--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ title: About Mahmoud Kraiem
 				<h2>About me,</h2>
 				<p>born and raised in Tunisia, I'm currently interning in Mumbai as a system engineer for Tata Consultancy Services.<br>
 				I'm passionate about sience and technology, I love coding and I'm trying to make a living of it<br>
-				and maybe may I contribute to making someone's life better or contribute something grand for humanity's sake.<br>
+				and maybe may I contribute to making someone's life better hoping that someday I'd contribute to something grand for humanity's sake.<br>
 				My wildest dream is to contribute to something big in the space industry.<br>
 				I believe that by exploring space, humans will come to understand that their<br>
 				humanity transends borders and cultures.<br>
