--- a/about/index.html
+++ b/about/index.html
@@ -17,8 +17,8 @@ title: About Mahmoud Kraiem
 		<div class="section full-page" id="cv">
 				<div class="set-box-shadow center-block-horiz" id="Iframe-Master-CC-and-Rs">
 					<div class="responsive-wrapper responsive-wrapper-wxh-572x612" style="-webkit-overflow-scrolling: touch; overflow: auto;">
-						<!--<iframe src="https://drive.google.com/file/d/0B6JldOI3g73aTEpoSG5pazhFZlE/preview">-->
-						<iframe src="https://drive.google.com/file/d/0B6JldOI3g73aUFVVVXUyQ1dEUlU/preview" width="640" height="480">
+						<!--<iframe src="https://drive.google.com/file/d/0B6JldOI3g73aUFVVVXUyQ1dEUlU/preview" width="640" height="480">-->
+						<iframe src="https://drive.google.com/file/d/0B6JldOI3g73abXBzX3NVdlRWWEk/preview" width="640" height="480">
 						<p style="font-size: 110%;"><em><strong>ERROR:</strong> An &#105;frame should be displayed here but your browser version does not support &#105;frames.</em> Please update your browser to its most recent version and try again.</p></iframe>
 					</div>
 				</div>
